objects/DMAPP__Account_Political_Map_Influence__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Influenced_Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Influenced</label>
        <referenceTo>DMAPP__Account_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Account Political Map Influences (Influenced)</relationshipLabel>
        <relationshipName>Account_Political_Map_Influences1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Influencing_Contact__c</fullName>
        <label>Influencer</label>
        <referenceTo>DMAPP__Account_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Account Political Map Influences</relationshipLabel>
        <relationshipName>Influences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map__c</fullName>
        <label>Political Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Account Political Map Influences</relationshipLabel>
        <relationshipName>Account_Political_Map_Influences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Political Map Influence</label>
    <nameField>
        <label>Account Political Map Influence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Political Map Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>